syntax = 'proto3';

option java_outer_classname = 'TokenPool';

package localfileserver.protobuf;

import 'token.proto';

message TokenPage {
    repeated Token token = 1;
}